rpi5/qbittorrent/port-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: port-monitor
  labels:
    app: port-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: port-monitor
  template:
    metadata:
      labels:
        app: port-monitor
    spec:
      containers:
        - name: port-monitor
          image: busybox:1.38.0@sha256:fd7dc98638c8e305f4dc34e979f1c0fdfdcaeb0fbf8fcff77ae834b6da3d7e6e
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - |
              [...]
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 32Mi
