rpi5/qbittorrent/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  serviceName: qbittorrent
  template:
    metadata:
      name: qbittorrent
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: openvpn
          image: debian:13.7-slim@sha256:a29215f6a35e51e22adffa17f89e9d2ef06214e64a2bad10d765c46aea49f11f
          imagePullPolicy: IfNotPresent
          args:
            - "/bin/sh"
            - "/entrypoint.sh"
          volumeMounts:
            - mountPath: /dev/net/tun
              name: tuntap
            - mountPath: /config
              name: ovpn-config
            - mountPath: /auth
              name: ovpn-auth
            - mountPath: /entrypoint.sh
              name: ovpn-script
              subPath: entrypoint.sh
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          readinessProbe:
            exec: { command: [ "/bin/sh","-c","ip link show tun0 >/dev/null 2>&1" ] }
            initialDelaySeconds: 30
            periodSeconds: 5
        - name: qbittorrent
          image: linuxserver/qbittorrent:5.2.3@sha256:457e4eec2ee3f5e4ef59f237ad51f6143deba9f7445ab48bb5204a98888ef9aa
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
            - mountPath: /custom-cont-init.d
              name: qbt-script
              readOnly: true
      restartPolicy: Always
      securityContext:
        fsGroup: 3002
      volumes:
        - name: data
          hostPath:
            path: /data
        - name: tuntap
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: ovpn-config
          secret:
            secretName: ovpn-config
        - name: ovpn-auth
          secret:
            secretName: ovpn-auth
        - name: ovpn-script
          configMap:
            name: ovpn-script
            defaultMode: 0755
        - name: qbt-script
          configMap:
            name: qbt-script
            defaultMode: 0755
      nodeSelector:
        kubernetes.io/hostname: odroid-h4
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
