rpi5/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
